--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ PORT=3000
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=note-db
-DATABASE_URL=`postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postges-db:5432/${POSTGRES_DB}?schema=public`
+DATABASE_URL=`postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres-db:5432/${POSTGRES_DB}?schema=public`
 
 
 PGADMIN_DEFAULT_EMAIL=admin@gmail.com
